[tool.poetry]
name = "crud-contadoria"
version = "0.1.0"
description = ""
authors = ["Fasri <felipear@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
